--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-parallax": "^3.0.3",
     "react-scripts": "3.4.1",
     "react-scroll-parallax": "^2.3.3",
